Desktop listing overlay page z-index issue fixed. It now actually goes over the main top nav

--- a/src/components/pages/listingOverlayPage/desktop/desktopListingOverlayPage.module.scss
+++ b/src/components/pages/listingOverlayPage/desktop/desktopListingOverlayPage.module.scss
@@ -7,6 +7,7 @@
   background: rgba(0, 0, 0, 0.7803921569);
   height: 100vh;
   overflow: hidden;
+  z-index: 1001;
 }
 
 .overlay {
